--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,7 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0px auto;
-  padding:  30vh 0 50vh 0;
+  /* padding:  30vh 0 50vh 0; */
 
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
@@ -821,7 +821,7 @@ span {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 150px 0;
+  /* padding: 150px 0; */
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -1066,7 +1066,7 @@ span {
   flex-direction: column-reverse;
   text-align: center;
   margin: 0 auto;
-  padding: 100px 20px;
+  padding: 0 20px;
 
   background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
 
@@ -1199,7 +1199,7 @@ img {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 0.5em 0;
   background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
   background-repeat: no-repeat;
   background-size: cover;
