--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,6 @@ span {
   border-radius: 3px;
   text-align: center;
   transition: all .3s;
-  animation: shadow 2s ease-in-out infinite;
   font-family: 'Gruppo', cursive;
 
 }
@@ -894,7 +893,7 @@ span {
   color: #fff;
   width: 100%;
   background: linear-gradient(0deg, #dc134c, #333);
-  color: #9e9595;
+  color: #fff;
   text-align: center;
   padding: 3px;
   margin-bottom: 1.5em;
@@ -905,7 +904,6 @@ span {
   transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
   border: 2px solid #ddd;
-  animation: shadow 2s ease-in-out infinite;
   font-family: 'Gruppo', cursive;
   
 }
@@ -1359,6 +1357,8 @@ img {
 /*Keyframes*/
 /*End of Keyframes*/
 
+
+
 /*Media Query for tablet*/
 @media only screen and (min-width: 768px) {
   h1.section-title {
@@ -1418,8 +1418,11 @@ img {
   #skills .skills-item h2 {
     font-size: 2.5rem;
   }
-
-  /*End of Service Section*/
+  .dropbtn {
+    animation: shadow 2s ease-in-out infinite;
+  
+  }
+  /*End of Sskills Section*/
 
   /*Project*/
 
@@ -1472,6 +1475,10 @@ img {
 
   #projects .all-projects .project-img {
     height: 100%;
+  }
+  #profile-link {
+    animation: shadow 2s ease-in-out infinite;
+    color: #ddd;
   }
 
   /*End of Project*/
