--- a/css/style.css
+++ b/css/style.css
@@ -1358,6 +1358,40 @@ img {
 
 /*End of Footer*/
 
+/*back to top button*/
+.top-link {
+  font-size: 2.25rem;
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  background: #dc143c;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: grid;
+  place-items: center;
+  border-radius: 5px;
+  color: #fff;
+  animation: bounce 2s ease-in-out infinite;
+
+  visibility: hidden;
+  z-index: -100;
+}
+.show-link {
+  visibility: visible;
+  z-index: 1000;
+}
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+/*end of back to top button*/
 
 /*Keyframes*/
 /*End of Keyframes*/
