--- a/css/style.css
+++ b/css/style.css
@@ -1166,7 +1166,6 @@ img {
   font-size: 1.6em;
   background: #dc143c;
   color: #fff;
-  margin: 10px;
   padding: 8px;
   box-shadow: 15px 15px 5px #26262671;
   transition: color .5s;
@@ -1377,13 +1376,14 @@ img {
   position: fixed;
   bottom: 3rem;
   right: 3rem;
-  background: #dc143c;
+  border: 1px solid rgb(167, 166, 166);
+  background-image: linear-gradient(0deg, rgb(0, 0, 0), #dc143c);
   width: 3rem;
   height: 3rem;
   display: grid;
   place-items: center;
   border-radius: 5px;
-  color: #fff;
+  color: #ddd;
   animation: bounce 2s ease-in-out infinite;
   transition: .5s ease-in;
   opacity: 0;
@@ -1756,9 +1756,22 @@ img {
   .profile-link {
     font-size: 2.2rem;
   }
-
-  .camp_hub {
-    justify-content: space-evenly;
+  #cv {
+    font-size: 1.6em;
+    background: #dc143c;
+    color: #ffffff;
+    padding: 15px;
+    box-shadow: 15px 15px 5px #26262671;
+    transition: color .5s;
+    border: 2px solid #dc143c;
+    border-radius: 5px;
+    outline: none;
+    outline-offset: -2px;
+    transition: outline-offset 250ms ease;
+    animation: none;
+  }
+  #cv:hover {
+    color: #333;
   }
   #footer .social-icon {
     display: flex;
