--- a/css/style.css
+++ b/css/style.css
@@ -1118,13 +1118,15 @@ span {
 }
 
 #about .col-right p {
-  margin-bottom: 20px;
-  text-overflow: ellipsis;
+  margin-bottom: 2.1em;
   text-align: left;
   padding-left: 4px;
 }
 
-
+.custom-scrollbar-js {
+  height: 200px;
+  margin-bottom: 2em;
+}
 #about .col-left .about-img {
   height: 100%;
   width: 90%;
@@ -1167,6 +1169,7 @@ img {
   background: #dc143c;
   color: #fff;
   padding: 8px;
+  margin: 5px auto;
   box-shadow: 15px 15px 5px #26262671;
   transition: color .5s;
   border: 2px solid #dc143c;
