--- a/css/style.css
+++ b/css/style.css
@@ -1891,7 +1891,7 @@ img {
 #footer .social-item {
   margin: 0 10px;
 }
-
+}
 /*End of Media Query for Desktop*/
 
 /*Media Query for small devices*/
