--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
   --overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
   --redGradient: linear-gradient(0deg, #000, #dc243c, #000);
 }
-
+body  {
+  overflow-x: hidden;
+}
 html {
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
