--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 :root {
   --overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
   --redGradient: linear-gradient(0deg, #000, #dc243c, #000);
-  --crimson-light: #920a1c;
+  --crimson-light: #dc143c;
 }
 body  {
   overflow-x: hidden;
@@ -1021,11 +1021,29 @@ span {
   animation: none;
 }
 
-#projects .project-tile a:hover h2 {
-  text-decoration: 1px solid underline#f4f4f4;
-  text-underline-offset: .3em;
+
+#projects .project-tile a i {
+  background-image: linear-gradient(90deg, #fff, #f1eeef75, #fff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 150%;
+  background-position: left;
+  animation: icon-gradient 1s linear infinite alternate;
+  font-size: 2.5em;
+}
+#projects .project-tile a:hover i {
+  transition: 1s ease;
+  transform: scale(1.6);
+  margin: .3em 0 0 1em;
+
+
 }
 
+@keyframes icon-gradient {
+  100% {
+    background-position: right;
+  }
+} 
 #projects .project-img {
   flex-basis: 50%;
   width: 100%;
