--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ span {
 .skills-top p {
   color: #fff;
   background: transparent;
-  
+  text-shadow: 2px 2px 1px #000a;
   overflow: hidden;
 }
 
