--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
   --redGradient: linear-gradient(0deg, #000, #dc243c, #000);
   --crimson-light: #dc243c;
-  --text-shadow-lg: 2px 2px 1px #000a;
+  --text-shadow-lg: 1.5px 1.5px 1px #000;
   --text-shadow-sm: 1px 1px 1px #000a;
 }
 body  {
@@ -610,8 +610,8 @@ span {
 .skills-top p {
   color: #fff;
   background: transparent;
-  text-shadow: 2px 2px 1px #000a;
   overflow: hidden;
+  text-shadow: var(--text-shadow-lg);
 }
 
 .skills-top::after{
@@ -625,8 +625,8 @@ span {
     border-left: 0px solid #cd143c;
     top: 100%;
     left: 50%;
-    margin-left: -22px;
-    margin-top: -22px;
+    margin-left: -24px;
+    margin-top: -24px;
     transform: rotate(45deg);
     background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
     
