--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ span {
   background: transparent;
   transition: all .3s linear;
   box-shadow: inset 0px 0px 20px #ce0d34b9,
-    0px 0px 30px rgba(255, 255, 255, 0.61);
+    0px 0px 10px rgba(255, 255, 255, 0.61);
   filter: blur(0);
 
 }
@@ -772,13 +772,13 @@ span {
 
 .dropbtn:hover,
 .dropbtn:focus {
-  transition: all .4s ease;
+  transition: all .2s ease;
   background: var(--overlay);
   /* border: 1px solid #dc143c; */
   border-radius: 10px;
   outline: none;
   animation: none;
-  box-shadow: 0px 3px 2px #cc0d33;
+  box-shadow: 0px 3px 2px #f5869c86;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -1145,9 +1145,10 @@ span {
 
 #about .col-right h2 {
   font-size: 1.8rem;
-  font-weight: 500;
-  letter-spacing: 0.2rem;
+  font-weight: 700;
+  letter-spacing: 0.3rem;
   margin-bottom: 10px;
+  
 }
 
 #about .col-right p {
@@ -1192,7 +1193,7 @@ img {
 }
 
 .fcc-link {
-  color: #fff000;
+  color: #dc143c;
 }
 
 .fcc-link:hover {
@@ -1203,25 +1204,44 @@ img {
   display: flex;
   justify-content: space-evenly;
   font-size: 1.6em;
-  background: #dc143c;
+  /* background: #dc143c; */
+  background-image: linear-gradient(0deg, #dc143c, #000);
   color: #fff;
   margin: 0 auto;
-  padding: 8px;
+  padding: 1em;
   box-shadow: 15px 15px 5px #26262671;
-  transition: color .5s;
+  text-transform: uppercase;
+
   
   border: 2px solid #dc143c;
-  border-radius: 5px;
-  outline: 2px solid #fff;
+  /* border-radius: 5px; */
+  outline: 1px solid rgba(255, 255, 255, 0.537);
   outline-offset: -2px;
   transition: outline-offset 250ms ease;
   animation: cv-button 2s ease-in-out infinite;
 }
+#cv a{
+  transition: .3s ease;
+  color: #fff;
+  text-shadow: var(--text-shadow-sm);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 #cv i {
-  color: #fff;
-  font-size: 1.2em;
-
+  background-image: linear-gradient(30deg, rgb(185, 184, 184), #fff);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2em;
+  padding-right: .1em;
+  text-shadow: none;
+}
+#cv a:hover {
+  transition: .3s ease;
+  transform: scale(1.1);
+  opacity: .8;
 }
 
 @keyframes cv-button {
@@ -1231,13 +1251,6 @@ img {
   }
 }
 
-#cv:hover,
-#cv:focus {
-  transition: .3s;
-  color: darkblue;
-  box-shadow: 15px 15px 10px #26262671;
-
-}
 
 /*end of About Section*/
 
@@ -1893,20 +1906,6 @@ img {
   /*about*/
   .profile-link {
     font-size: 2.2rem;
-  }
-  #cv {
-    font-size: 1.6em;
-    background: #dc143c;
-    color: #ffffff;
-    padding: 15px;
-    box-shadow: 15px 15px 5px #26262671;
-    transition: color .5s;
-    border: 2px solid #dc143c;
-    border-radius: 5px;
-    outline: none;
-    outline-offset: -2px;
-    transition: outline-offset 250ms ease;
-    animation: none;
   }
   #cv:hover {
     color: #333;
