--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,6 @@ span {
   border-radius: 10px;
   height: auto;
   border: 1px solid #fff;
-
   /*border radius not visiblie without hidden overflow*/
 }
 
@@ -715,6 +714,8 @@ span {
   margin-bottom: 10px;
   text-transform: capitalize;
   font-family: 'Gruppo', cursive;
+  text-decoration: underline rgba(221, 221, 221, 0.466);
+  text-underline-offset: .2em;
 }
 
 #skills .skills-item {
@@ -1275,7 +1276,6 @@ img {
   /* border: 1px #dc143c solid; */
   border-radius: 20px;
   background-color: #f4f4f4;
-  color: #dc143c;
   filter: grayscale(0);
   transform: scale(0.95);
 }
@@ -1291,11 +1291,19 @@ img {
   font-weight: 500;
   margin-bottom: 5px;
 }
-
+#contact .contact-item:hover h1 {
+  background-image: linear-gradient(30deg, purple, #dc143c, blue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 #contact .contact-info h2 {
   font-size: 1.3rem;
   line-height: 2rem;
   font-weight: 500;
+}
+#contact .contact-item:hover h2 {
+  color: #000;
 }
 
 /*End of Contact Section*/
@@ -1807,6 +1815,12 @@ img {
   }
 
   /*End of header*/
+  #skills .skills-top {
+    width: 60%;
+  }
+  #skills .skills-top p {
+    font-size: 1.9em;
+  }
   #skills .skills-bottom .skills-item {
     flex-basis: 33%;
     width: 100%;
