--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,23 @@
   --crimson-light: #dc243c;
   --text-shadow-lg: 1.5px 1.5px 1px #000;
   --text-shadow-sm: 1px 1px 1px #000a;
+  --text-shadow: 2px 2px 2px #000;
+
+  --box-shadow: 1px 1px 5px #000,
+                -1px -1px #ddd,
+                0 0 10px #9414256e,
+                inset 5px 5px 5px #dddddd46,
+                inset -5px -5px 5px #000a;
+
+  --box-shadow-hover: 0 0 5px #ce0d3491,
+                      -4px 0 15px #dddddd46, 
+                      4px 0 15px #000a,
+                      inset 1px 1px 3px #000,
+                      inset -1px -1px 3px #ddda,
+                      inset 4px 4px 5px #000a,
+                      inset -4px -4px 5px #dddddd46 ;
 }
+
 body  {
   overflow-x: hidden;
 }
@@ -188,11 +204,7 @@ span {
   border-radius: 40px;
   
   background-color: #8584843a;
-  box-shadow: 1px 1px 5px #000,
-              -1px -1px #ddd,
-              0 0 10px #9414256e,
-              inset 5px 5px 5px #dddddd46,
-              inset -5px -5px 5px #000a;
+  box-shadow: var(--box-shadow);
   text-shadow: 2px 2px 2px #000;
 
   transition: .2s linear;
@@ -221,15 +233,8 @@ span {
 }
 
 #cta-header:hover {
-  background: transparent;
   transition: all .2s linear;
-  box-shadow: 0 0 5px #ce0d3491,
-              -4px 0 15px #dddddd46, 
-              4px 0 15px #000a,
-              inset 1px 1px 3px #000,
-              inset -1px -1px 3px #ddda,
-              inset 4px 4px 5px #000a,
-              inset -4px -4px 5px #dddddd46;
+  box-shadow: var(--box-shadow-hover);
 
 }
 
