--- a/css/style.css
+++ b/css/style.css
@@ -719,8 +719,9 @@ span {
   width: 80px;
   /* border: 1px solid #eee; */
   border-radius: 50%;
-  box-shadow: 2px 2px 3px #ddd;
+  box-shadow: -2px -2px 3px #ddd;
   padding: 10px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
 
@@ -861,7 +862,8 @@ span {
   top: 0;
   height: 100%;
   width: 100%;
-  background: #dc143c27;
+  background-image: radial-gradient(#8d092e71, #000a);
+
   /*glassmorphism effect*/
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);  
