--- a/css/style.css
+++ b/css/style.css
@@ -1207,13 +1207,22 @@ img {
 }
 
 #cv i {
-  background-image: linear-gradient(30deg, rgb(185, 184, 184), #fff);
+  background-image: linear-gradient(60deg, #fff 30%,rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+  background-size: 300%;
+  background-position: right;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 2em;
   padding-right: .1em;
   text-shadow: none;
+  animation: icon-shine 3s linear infinite ;
+}
+@keyframes icon-shine {
+  
+  100% {
+    background-position: left;
+  }
 }
 #cv a:hover {
   transition: .3s ease;
