--- a/css/style.css
+++ b/css/style.css
@@ -1124,10 +1124,11 @@ span {
 
 #about .col-right h2 {
   font-size: 1.8rem;
-  font-weight: 700;
+  font-weight: 600;
   letter-spacing: 0.3rem;
   margin-bottom: 10px;
-  
+  text-decoration: underline #ddda;
+  text-underline-offset: .1em;
 }
 
 #about .col-right p {
