about col right underline color

--- a/css/style.css
+++ b/css/style.css
@@ -1127,7 +1127,7 @@ span {
   font-weight: 600;
   letter-spacing: 0.3rem;
   margin-bottom: 10px;
-  text-decoration: underline #ddda;
+  text-decoration: underline rgba(0, 0, 0, 0.24);
   text-underline-offset: .1em;
 }
 
