--- a/css/style.css
+++ b/css/style.css
@@ -1294,13 +1294,14 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 10px 10px 3px #0a0a0a59;
+  /* box-shadow: 10px 10px 3px #0a0a0a59; */
+  box-shadow: var(--box-shadow);
   transition: 0.4s ease;
   backdrop-filter: blur(1px);
 }
 
 #contact .contact-item:hover {
-  box-shadow: 5px 5px 1px #dc143c75;
+  box-shadow: -5px -5px 1px #dc143c75;
   /* border: 1px #dc143c solid; */
   border-radius: 20px;
   background-color: #f4f4f4;
@@ -1318,6 +1319,11 @@ img {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 5px;
+  padding: .1em;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px #000;
+  border: 1px solid rgba(255, 255, 255, 0.212);
+
 }
 #contact .contact-item:hover h1 {
   background-image: linear-gradient(10deg, purple, #dc1489, skyblue, purple, #dc1489, skyblue );
@@ -1325,6 +1331,7 @@ img {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  box-shadow: inset 4px 2px 5px #000a;
 }
 #contact .contact-info h2 {
   font-size: 1.3rem;
@@ -1895,10 +1902,6 @@ img {
   #contact .contact-info h1 {
     font-size: 3.2em;
     margin-bottom: 10px;
-    border-bottom: 1px dashed rgba(221, 221, 221, 0.452);
-  }
-  #contact .contact-info h1:hover{
-    border-bottom: 1px dashed #dc143c;
   }
   #contact .contact-info h2 {
     font-size: 1.5em;
