--- a/css/style.css
+++ b/css/style.css
@@ -1317,7 +1317,7 @@ img {
   padding: .3em;
 }
 #contact .contact-item:hover .icon {
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow); 
   transform: scale(1);
   transition: .3s ease-out;
 }
@@ -1326,7 +1326,7 @@ img {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 5px;
-  padding: .1em;
+  padding: .2em;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #000;
   border: 1px solid rgba(255, 255, 255, 0.212);
@@ -1344,8 +1344,17 @@ img {
   font-size: 1.3rem;
   line-height: 2rem;
   font-weight: 500;
+  padding: .2em;
+  border-radius: 10px;
+  margin: .5em auto;
 }
 #contact .contact-item:hover h2 {
+  box-shadow: 0 0 5px #a1a1a1aa,
+              2px 2px 2px #a1a1a1aa,
+              -2px -2px #a1a1a1aa; 
+  transform: scale(1.1);
+  letter-spacing: .2em;
+  transition: .3s ease-out;
   color: #000;
 }
 
